trabalhando no input checkbox

--- a/styles/fields/radio.css
+++ b/styles/fields/radio.css
@@ -9,7 +9,7 @@ label + .radio-wrapper {
 }
 
 .radio-inner {
-    border: 1px solid var(--stroke-defaut);
+    border: 1px solid var(--stroke-default);
     border-radius: .5rem;
 
     display: grid;
