--- a/styles/fields/droparea.css
+++ b/styles/fields/droparea.css
@@ -1,5 +1,5 @@
 .dropzone {
-    border: 1px dashed var(--stroke-defaut);
+    border: 1px dashed var(--stroke-default);
     border-radius: .25rem;
 
     display: grid;
